--- a/sample.html
+++ b/sample.html
@@ -22,14 +22,13 @@
                 <!-- v-bind:key="student.id"は、切り出された各要素の一意性を確保するために使う -->
                 <li v-for="student in students" v-bind:key="student.id">
                     <!-- {{ }} のなかに書いた記述で、Vue.jsのデータの式展開が行える -->
-                    ID {{student.id}} /
+                    ID {{student.id}} 
                     名前 {{student.name}} /
                     コース {{student.cource}} /
                     受講期 {{student.acceptance_period}}
                 </li>
             </ul>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
         <script src="sample.js"></script>
     </body>
 </html>
